--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,25 @@
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://mysql1.it.nuigalway.ie:3306/mydb6138
+#spring.datasource.username=mydb6138ca
+#spring.datasource.password=nu4fep
+#spring.jpa.hibernate.ddl-auto=create
+##spring.jpa.show-sql=true
+#### Hibernate Properties
+### The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.format_sql=true
+
+
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql1.it.nuigalway.ie:3306/mydb6138
-spring.datasource.username=mydb6138ca
-spring.datasource.password=nu4fep
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/takeaway
+spring.datasource.username=hbstudent
+spring.datasource.password=hbstudent
 spring.jpa.show-sql=true
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.error.include-message=always
-
 spring.data.rest.base-path=/api
+allowed.origins=http://localhost:4200
+spring.data.rest.detection-strategy=ANNOTATED
