--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/takeaway
-spring.datasource.username=hbstudent
-spring.datasource.password=hbstudent
+spring.datasource.username=**
+spring.datasource.password=**
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
